[tool.poetry]
name = "study-fastapi"
version = "0.1.0"
description = ""
authors = ["lazy-sky <1cielo@naver.com>"]
readme = "README.md"
packages = [{include = "study_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
